--- a/client/src/pages/AuthForm.css
+++ b/client/src/pages/AuthForm.css
@@ -1,4 +1,3 @@
-/* AuthForm.css */
 body {
   margin: 0;
   padding: 0;
@@ -6,14 +5,13 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  /* font-family: 'Jost', sans-serif; */
-  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
 }
 
 .main {
-  width: 450px; /* Widened to fit row layout */
-  height: 550px; 
+  width: 450px;
+  height: 550px;
   background: #24243e;
   overflow: hidden;
   border-radius: 10px;
@@ -42,58 +40,54 @@ body {
 }
 
 .input-group {
-  width: 80%; 
+  width: 80%;
   margin: 0 auto;
   justify-content: center;
   align-items: center;
-  
 }
 
-/* Row alignment logic */
 .field-row {
   display: flex;
   align-items: center;
-  justify-content:space-between ;
+  justify-content: space-between;
   margin-bottom: 15px;
 }
 
 .field-label {
   color: #fff;
   font-size: 14px;
-  margin-left: 30px;
-  /* flex: 0.8;  */
+  margin-left: 20px;
 }
 
 .login .field-label {
   color: #573b8a;
   font-size: 0.95rem;
   font-weight: bold;
-
 }
 
 input {
-  flex: 0.6;
+  width: 60%;
   height: 35px;
   background: #e0dede;
   padding: 0 10px;
-  margin-right: 30px;
+  margin-right: 20px;
   border: none;
   outline: none;
   border-radius: 5px;
   box-sizing: border-box;
 }
 
-.login-field{
-    background-color: #bb9df4;
-   color: #35205a;
-   font-size: 1rem;
-   font-weight: 500;
+.login-field {
+  background-color: #ccbbed;
+  color: #35205a;
+  font-size: 0.9rem;
+  font-weight: 500;
 }
 
 button {
   width: 70%;
   height: 40px;
-  margin: 50px auto;
+  margin: 30px auto 10px auto; /* Reduced margin to fit new text */
   justify-content: center;
   display: block;
   color: #fff;
@@ -121,8 +115,43 @@ button:hover {
 
 .login .main-label {
   color: #573b8a;
-  /* margin-top: 50px; */
+  padding-top: 20px;
   transform: scale(.7);
+}
+
+.forgot-password-container {
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 20px;
+  margin-top: -5px;
+}
+
+.forgot-password {
+  color: #573b8a;
+  font-size: 12px;
+  font-weight: bold;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.forgot-password:hover {
+  text-decoration: underline;
+}
+
+.switch-form {
+  text-align: center;
+  color: black;
+  font-size: 14px;
+  margin-top: 10px;
+  
+}
+
+.signup-link {
+ 
+  color: #573b8a;
+  font-weight: 800;
+  cursor: pointer;
+  text-decoration: none;
 }
 
 #chk:checked ~ .login {
